# money-manager-server

./: .env  .gitignore  Cargo.toml  README.md  Rocket.toml  log-config.yml  money-manager-mysql.sql  money-manager-postgres.sql  money-manager.mwb  run.sh
db schema/: money-manager-postgres.sql
money-manager-server/: log-config.yml
money-manager-server/src/: base_model.rs  controller.rs  database.rs  main.rs  schema.rs
money-manager-server/src/account/: account_type.rs  mod.rs  model.rs
money-manager-server/src/auth/: auth.rs  mod.rs  model.rs
money-manager-server/src/causal/: mod.rs  model.rs
money-manager-server/src/currency/: mod.rs  model.rs
money-manager-server/src/user/: mod.rs
src/: base_controller.rs  base_model.rs  controller.rs  database.rs  main.rs  schema.rs
src/account/: account_type.rs  mod.rs  model.rs
src/auth/: auth.rs  mod.rs  model.rs
src/causal/: mod.rs  model.rs
src/currency/: mod.rs  model.rs
src/detail/: mod.rs  model.rs
src/giro/: mod.rs  model.rs
src/place/: mod.rs  model.rs
src/transaction/: mod.rs  model.rs  transaction_detail.rs  transaction_type.rs
src/user/: mod.rs  model.rs
