[package]
name = "money-manager-server"
version = "0.1.0"
authors = ["rippetanks <simone.martelli.98@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.2"
serde = { version = "1.0.90", features = ["derive"] }
diesel = { version = "1.0.0", features = ["postgres", "chrono"] }
dotenv = "0.9.0"
chrono = { version = "0.4.7", features = ["serde"] }
rust-crypto = "0.2.36"
jwt = "0.4.0"
ring = "0.13.5"
log4rs = "0.8.3"
log = "0.4.8"
data-encoding = "2.1.2"
rocket_cors = "0.5.0"
# rand = "0.5.6"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json", "diesel_postgres_pool"]
